--- a/Index.html
+++ b/Index.html
@@ -4,4 +4,6 @@
 <link rel="stylesheet"href="Style.css">
 <a href="https://lsrhs51815.github.io/Site/contract.html">contract</a>
 </head>
+<body>
+</body>
 </html>
