--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <a href="https://lsrhs51815.github.io/Site/Citizenship.html">citizenship</a>
 <link rel="stylesheet"href="Style.css">
 <a href="https://lsrhs51815.github.io/Site/contract.html">contract</a>
-<a href="images/index.html">
+<a href="https://lsrhs51815.github.io/Site/images/index.htmlimages/index.html">images</a>
 </head>
 <body>
 </body>
