--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet"href="Style.css">
 <a href="https://lsrhs51815.github.io/Site/contract.html">contract</a>
 <a href="https://lsrhs51815.github.io/Site/images/index.htmlimages/index.html">images</a>
+<a href="https://lsrhs51815.github.io/Site/images/image%20formats.htm">image formats</a>
 </head>
 <body>
 </body>
