--- a/Story/page 1.html
+++ b/Story/page 1.html
@@ -13,7 +13,7 @@ What do you do?
 </p>
 <img src="dock.jpeg"width=400 pixels">
 
-<p> <a href="file:///Users/block5/Desktop/Site/Story/page%202.html">Ask them what they are doing
+<p> <a href="https://lsrhs51815.github.io/Site/Story/page%202.html">Ask them what they are doing
 </p>
-<p>  <a href="file:///Users/block5/Desktop/Site/Story/page%203.html">Try to casually walk past them
+<p>  <a href="https://lsrhs51815.github.io/Site/Story/page%203.html">Try to casually walk past them
 </p>
