--- a/Story/page 10.html
+++ b/Story/page 10.html
@@ -7,4 +7,4 @@
   <h1>Call The Police</h1>
   <p> You make a break for it and hide behind building and pull out your cell phone and you dial 911. The attackers catch up with you and you have to run to a different building. You hear sirens coming and you find a hiding place. You hear the police speak with the men and they arrest them and they say you can go home(end)
 </p>
-<a href=""
+<a href="https://lsrhs51815.github.io/Site/Story/page%201.html">play again
