--- a/Story/page 12.html
+++ b/Story/page 12.html
@@ -7,6 +7,6 @@
   <h1>Move Towards Them to see Exactly What They Are Doing</h1>
   <p>You can finally see what the two men are doing. The are dumping body bags into the river. As you move towards them the two men start shouting at you and then they start running after you. You manage to hide in a run down building but you know the men are close. What do you do?
   </p>
-  <a href="file:///Users/block5/Desktop/Site/Story/page%2013.html">Try To Run Home
-  <p>  <a href="file:///Users/block5/Desktop/Site/Story/page%2014.html">Stay Hidden
+  <a href="https://lsrhs51815.github.io/Site/Story/page%2013.html">Try To Run Home
+  <p>  <a href="https://lsrhs51815.github.io/Site/Story/page%2014.html">Stay Hidden
 </p>
