--- a/Story/page 13.html
+++ b/Story/page 13.html
@@ -6,4 +6,4 @@
 <body>
   <h1>Try to Run home</h1>
   <p> You make a break for it once they aren't looking. You manage to make it a couple of blocks to the nearest police station and you stop there because you know the attackers are right behind you. The police bring you in and manage to arrest your two attackers(end)
-    <a href="file:///Users/block5/Desktop/Site/Story/page%201.html">play again
+    <a href="https://lsrhs51815.github.io/Site/Story/page%201.html">play again
