--- a/Story/page 14.html
+++ b/Story/page 14.html
@@ -7,4 +7,4 @@
   <h1>Stay hidden</h1>
   <p>You manage to stay hidden all night and make it back home in the morning. You explain the situation to a friend and inform the police about what happened. However your attackers are never found(end)
 </p>
-<a href="file:///Users/block5/Desktop/Site/Story/page%201.html">play again
+<a href="https://lsrhs51815.github.io/Site/Story/page%201.html">play again
