--- a/Story/page 2.html
+++ b/Story/page 2.html
@@ -7,6 +7,6 @@
   <h1>Ask them what they are doing</h1>
   <p>Both men turn to look at you. One of them says none of your business! and the other says Get out out of here!
 </p>
-<a href="file:///Users/block5/Desktop/Site/Story/page%204.html">Walk Away
-<p>  <a href="file:///Users/block5/Desktop/Site/Story/page%205.html">Keep Walking Towards Them
+<a href="https://lsrhs51815.github.io/Site/Story/page%204.html">Walk Away
+<p>  <a href="https://lsrhs51815.github.io/Site/Story/page%205.html">Keep Walking Towards Them
 </p>
