--- a/Story/page 3.html
+++ b/Story/page 3.html
@@ -7,6 +7,6 @@
   <h1>Try to Casually Walk Past Them</h1>
 <p>One of the men. spot you and start moving towards you. He yells something you don't understand.What do you do?
 </p>
-<a href="file:///Users/block5/Desktop/Site/Story/page%206.html">Run Away
-  <p><a href="file:///Users/block5/Desktop/Site/Story/page%207.html">Ask Him What he Said
+<a href="https://lsrhs51815.github.io/Site/Story/page%206.html">Run Away
+  <p><a href="https://lsrhs51815.github.io/Site/Story/page%207.html">Ask Him What he Said
 </p>
