--- a/Story/page 4.html
+++ b/Story/page 4.html
@@ -6,4 +6,4 @@
 <body>
   <h1>Walk Away</h1>
 <p>You walk away and one of them says"You never saw us!"(end) </p>
-<a href="file:///Users/block5/Desktop/Site/Story/page%201.html">play again
+<a href="https://lsrhs51815.github.io/Site/Story/page%201.html">play again
