--- a/Story/page 5.html
+++ b/Story/page 5.html
@@ -7,4 +7,4 @@
 <h1>Keep Walking Towards them</h1>
 <p>You get closer and finally get a look at what they are doing. They were dumping bodybags into the water! You feel your stomach sink. They both are still looking at you and then they start to sprint towards you. You start running as fast as you can. You manage to get away and you make it to your house and call the police about what you saw.(end)
 </p>
-<a href="file:///Users/block5/Desktop/Site/Story/page%201.html">play again
+<a href="https://lsrhs51815.github.io/Site/Story/page%201.html">play again
