--- a/Story/page 6.html
+++ b/Story/page 6.html
@@ -7,6 +7,6 @@
   <h1>Run away</h1>
   <p>You hear them mumble a bit and then one of them starts to chase after you. You run as fasts you can but you don't know where to go.
   </p>
-  <a href="file:///Users/block5/Desktop/Site/Story/page%208.html">Run to the Police Station
-    <p><a href="file:///Users/block5/Desktop/Site/Story/page%209.html">Run Home
+  <a href="https://lsrhs51815.github.io/Site/Story/page%208.html">Run to the Police Station
+    <p><a href="https://lsrhs51815.github.io/Site/Story/page%209.html">Run Home
 </p>
