--- a/Story/page 8.html
+++ b/Story/page 8.html
@@ -7,3 +7,4 @@
   <h1>Run to the Police Station</h1>
   <p>You Make a break for the police station down the street. You mange to get there however you hear your attackers close behind you. You make in inside and explain everything to an officer. The attackers barge down the door but are immediatly taken down by the officers. The police explain they were part of some kind of dangerous gang. They tell you, you can go home(end)
 </p>
+<a href="https://lsrhs51815.github.io/Site/Story/page%201.html">play again
