--- a/Story/page 9.html
+++ b/Story/page 9.html
@@ -7,3 +7,4 @@
   <h1>Run Home</h1>
   <p> You make a break for your house. You run down the street and manage to make it back home. You're inside your house when you hear knocking on you door. Then someone kicks it down. You pull ot your cell phone and dial 911. You hear foot steps in the next room. You start to hear sirens coming. The attckers run off. You explain everything to the officers and they say they'll be on the look out.(end)
 </p>
+<a href="https://lsrhs51815.github.io/Site/Story/page%201.html">play again
