--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <a href="https://lsrhs51815.github.io/Site/contract.html">contract</a>
 <a href="https://lsrhs51815.github.io/Site/images/index.html">images</a>
 <a href="https://lsrhs51815.github.io/Site/images/image%20formats.htm">image formats</a>
+<a href="https://lsrhs51815.github.io/Site/Story/page%201.html">interactive story</a>
 </head>
 <body>
 </body>
