--- a/Story/page 7.html
+++ b/Story/page 7.html
@@ -7,6 +7,6 @@
   <h1>Ask Him What he Said</h1>
   <p>The man starts to move closer to you. You start to feel uncomfortable so you back up a bit. He yells Leave! Or you’re next!
   </p>
-  <a href="file:///Users/block5/Desktop/Site/Story/Page%2010.html">Call the Police
-    <p><a href="file:///Users/block5/Desktop/Site/Story/page%2012.html">Move Towards Them To See Exactly What They Are Doing
+  <a href="https://lsrhs51815.github.io/Site/Story/page%2010.html">Call the Police
+    <p><a href="https://lsrhs51815.github.io/Site/Story/page%2012.html">Move Towards Them To See Exactly What They Are Doing
     </p>
