--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/images/index.html">Images</a>
           <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/Story/page%201.html">Story</a>
+          <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/Citizenship.html">Citizenship</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
