--- a/store.html
+++ b/store.html
@@ -96,7 +96,7 @@
   <div class="card-body">
     <h5 class="card-title">The Dark Knight</h5>
     <p class="card-text">$11.99</p>
-    <a href="#" class="btn btn-primary">Buy</a>
+    <a href="" class="btn btn-primary">Buy</a>
   </div></div>
 </div>
 
