--- a/store.html
+++ b/store.html
@@ -87,7 +87,7 @@
   <div class="card-body">
     <h5 class="card-title">Avengers:Infinity War</h5>
     <p class="card-text">$15.99</p>
-    <a href="" class="btn btn-primary">Buy</a>
+    <a href="https://lsrhs51815.github.io/Site/buy.html" class="btn btn-primary">Buy</a>
   </div>
 </div></div>
 
@@ -96,7 +96,7 @@
   <div class="card-body">
     <h5 class="card-title">The Dark Knight</h5>
     <p class="card-text">$11.99</p>
-    <a href="" class="btn btn-primary">Buy</a>
+    <a href="https://lsrhs51815.github.io/Site/buy.html" class="btn btn-primary">Buy</a>
   </div></div>
 </div>
 
@@ -105,7 +105,7 @@
 <div class="card-body">
 <h5 class="card-title">Seven</h5>
 <p class="card-text">$7.99</p>
-<a href="#" class="btn btn-primary">Buy</a>
+<a href="https://lsrhs51815.github.io/Site/buy.html" class="btn btn-primary">Buy</a>
 
 
   </div>
@@ -119,7 +119,7 @@
     <div class="card-body">
     <h5 class="card-title">The Social Network</h5>
     <p class="card-text">$11.99</p>
-    <a href="#" class="btn btn-primary">Buy</a>
+    <a href="https://lsrhs51815.github.io/Site/buy.html" class="btn btn-primary">Buy</a>
     </div>
     </div></div>
 
@@ -128,7 +128,7 @@
     <div class="card-body">
     <h5 class="card-title">Mad Max:Fury Road</h5>
     <p class="card-text">$15.99</p>
-    <a href="" class="btn btn-primary">Buy</a>
+    <a href="https://lsrhs51815.github.io/Site/buy.html" class="btn btn-primary">Buy</a>
     </div></div>
     </div>
 
@@ -137,7 +137,7 @@
     <div class="card-body">
     <h5 class="card-title">Spider-Man Homecoming</h5>
     <p class="card-text">$15.99</p>
-    <a href="#" class="btn btn-primary">Buy</a>
+    <a href="https://lsrhs51815.github.io/Site/buy.html" class="btn btn-primary">Buy</a>
 
 
     </div>
@@ -151,7 +151,7 @@
     <div class="card-body">
     <h5 class="card-title">The Good, The Bad and The Ugly</h5>
     <p class="card-text">$6.99</p>
-    <a href="#" class="btn btn-primary">Buy</a>
+    <a href="https://lsrhs51815.github.io/Site/buy.html" class="btn btn-primary">Buy</a>
     </div>
     </div></div>
 
