--- a/store.html
+++ b/store.html
@@ -160,7 +160,7 @@
     <div class="card-body">
     <h5 class="card-title">Inception</h5>
     <p class="card-text">$11.99</p>
-    <a href="#" class="btn btn-primary">Buy</a>
+    <a href="https://lsrhs51815.github.io/Site/buy.html" class="btn btn-primary">Buy</a>
     </div></div>
     </div>
 
@@ -169,7 +169,7 @@
     <div class="card-body">
     <h5 class="card-title">Looper</h5>
     <p class="card-text">$9.99</p>
-    <a href="#" class="btn btn-primary">Buy</a>
+    <a href="https://lsrhs51815.github.io/Site/buy.html" class="btn btn-primary">Buy</a>
 
 
     </div>
