--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/images/index.html">Images</a>
           <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/Story/page%201.html">Story</a>
           <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/Citizenship.html">Citizenship</a>
+          <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/store.html">store</a>
 
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
