--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="..." alt="Story">
+      <img class="d-block w-100" src="story.jpeg" alt="Story">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Images">
+      <img class="d-block w-100" src="images.jpeg" alt="Images">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Citizenship">
+      <img class="d-block w-100" src="citizenship2.jpeg" alt="Citizenship">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
