--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/Story/page%201.html">Story</a>
           <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/Citizenship.html">Citizenship</a>
           <a class="dropdown-item" href="#"><a href="https://lsrhs51815.github.io/Site/store.html">store</a>
-
+          <a class="dropdown-item" href="#"><a href="http://wpsites.lsrhs.net/cole/">Wordpress</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
